# my-blockchain-internship

./: Blockchain Mini Task-1 (Day4).docx  blockchain_simulation.py  consensus_demo.py
Day 13 CRUD using Rust(NO REACT)/: Cargo.toml  README.txt
Day 13 CRUD using Rust(NO REACT)/src/: main.rs
Day 13 CRUD using Rust(NO REACT)/static/: index.html
Day 6- Task 2/: Blockchain Platform Comparison.docx
Day13-MiniTask2(Student Report-Pdf)/: Cargo.toml  README.txt
Day13-MiniTask2(Student Report-Pdf)/src/: main.rs
Day4-MiniTask1/: mining_simulation.py
Day9-Task DeployementMainnet/: .env  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
Day9-Task DeployementMainnet/.dfx/ic/canisters/newproject13_backend/: newproject13_backend.wasm  service.did.d.ts  service.did.js
Day9-Task DeployementMainnet/.dfx/ic/canisters/newproject13_frontend/: index.js
Day9-Task DeployementMainnet/.dfx/local/: canister_ids.json  network-id
Day9-Task DeployementMainnet/.dfx/local/canisters/newproject13_backend/: index.js  newproject13_backend.old.most
Day9-Task DeployementMainnet/.dfx/local/lsp/: ucwa4-rx777-77774-qaada-cai.did
Day9-Task DeployementMainnet/src/declarations/newproject13_backend/: index.d.ts  index.js
Day9-Task DeployementMainnet/src/declarations/newproject13_frontend/: index.d.ts  index.js
Day9-Task DeployementMainnet/src/newproject13_frontend/: package.json
Day9-Task DeployementMainnet/src/newproject13_frontend/src/: App.jsx  index.scss
