# Cargo.toml

[package]
name = "rust_task_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4" # Web framework
serde = { version = "1.0", features = ["derive"] } # For serializing/deserializing JSON
serde_json = "1.0" # For working with JSON
parking_lot = "0.12" # For efficient Mutex for shared state management
actix-files = "0.6" # To serve static files (HTML, JS, CSS)
actix-cors = "0.6" # To enable Cross-Origin Resource Sharing
